# nova-trame

./: .copier-answers.yml  .gitignore  .gitlab-ci.yml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  build_docs.sh  pyproject.toml
.github/workflows/: build-test.yml  nova-trame.yml  publish-docs.yml
dockerfiles/: Dockerfile
docs/: api.rst  conf.py  example_layouts.rst  getting_started.rst  index.rst  visualization.rst  working_with_trame.rst
example/: __init__.py  app.py  main.py
src/nova/trame/_internal/: utils.py
src/nova/trame/model/: data_selector.py  remote_file_input.py
src/nova/trame/model/ornl/: analysis_data_selector.py  neutron_data_selector.py  oncat_data_selector.py
src/nova/trame/utils/: types.py
src/nova/trame/view/components/: data_selector.py  execution_buttons.py  file_upload.py  input_field.py  progress_bar.py  remote_file_input.py  tool_outputs.py
src/nova/trame/view/components/ornl/: neutron_data_selector.py
src/nova/trame/view/components/visualization/: interactive_2d_plot.py  matplotlib_figure.py
src/nova/trame/view/layouts/: grid.py  hbox.py  vbox.py
src/nova/trame/view/theme/: exit_button.py  lifecycle_components.py  theme.py
src/nova/trame/view/theme/assets/: core_style.scss  vuetify_config.json
src/nova/trame/view/theme/assets/js/: revo_grid.js
src/nova/trame/view_model/: data_selector.py  execution_buttons.py  progress_bar.py  remote_file_input.py  tool_outputs.py
src/nova/trame/view_model/ornl/: neutron_data_selector.py
src/trame_facade/: theme.py
src/trame_facade/components/easy_grid/: view.py
src/trame_facade/view/theme/assets/: vuetify_config.json
tests/: conftest.py  test_data_selector.py  test_easy_grid.py  test_input_field.py  test_interactive_2d_plot.py  test_interface.py  test_layouts.py  test_local_storage.py  test_matplotlib.py  test_neutron_data_selector.py  test_parameter_bindings.py  test_remote_file_input.py  test_theme.py  test_tool_components.py
tests/gallery/: __init__.py  app.py  getting_started.rst  main.py
tests/gallery/models/: config.py  data_selector.py  file_upload.py  neutron_data_selector.py
tests/gallery/view_models/: config.py  data_selector.py  file_upload.py  neutron_data_selector.py
tests/gallery/views/: app.py
trame_facade/: README.md  __init__.py  components.py  core_style.scss  theme.py  vuetify_config.json
trame_facade/components/: __init__.py
trame_facade/components/easy_grid/: __init__.py  view.py
trame_facade/components/input_field/: __init__.py  view.py
trame_facade/components/remote_file_input/: __init__.py  model.py  view.py  viewmodel.py
