[project]
name = "nova-trame"
version = "1.0.0rc"
description = "A Python Package for injecting curated themes and custom components into Trame applications"
authors = [
    { name = "John Duggan", email = "dugganjw@ornl.gov" },
    { name = "Kristin Maroun", email = "ponsonbykr@ornl.gov" },
    { name = "Sergey Yakubov", email = "yakubovs@ornl.gov" },
    { name = "Gregory Cage", email = "cagege@ornl.gov" }
]
readme = "README.md"
license = "MIT"
keywords = ["NDIP", "Python", "Trame", "Vuetify"]

[project.urls]
Changelog = "https://code.ornl.gov/ndip/public-packages/nova-trame/blob/main/CHANGELOG.md"

[tool.poetry]
packages = [{include = "nova", from = "src"}]

[tool.poetry.dependencies]
altair = "*"
libsass = "*"
mergedeep = "*"
mpld3 = "^0.5.11"
python = ">=3.10,<4.0"
tomli = "*"
tornado = ">=6.5.0"
trame = "*"
trame-datagrid = "*"
trame-matplotlib = "*"
trame-plotly = "*"
trame-vega = "*"
trame-vuetify = "*"
nova-mvvm = "*"
pydantic = "*"
nova-common = ">=0.2.2"
blinker = "^1.9.0"
natsort = "^8.4.0"
pyoncat = "^2.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
pre-commit = "^2.20.0"
coverage = "^6.4.3"
pytest = "*"
ruff = "^0.6.2"
selenium = "*"
altair = "<5.3.0"
vega-datasets = "^0.9.0"
requests = "^2.32.4"
sphinx = "*"
sphinx-rtd-theme = "^3.0.2"
sphinxcontrib-napoleon ="*"

[tool.poetry.scripts]
app = "tests.gallery:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test*.py"]
norecursedirs = [".git", "tmp*", "_tmp*", "__pycache__"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "N",  # PEP8 naming convetions
    "D"  # pydocstyle
]
ignore = [
    "C901",  # too complex
    "D102", # Missing docstring in public function
    "D103", # Missing docstring in public method
    "D401"  # imperative mood

]

[tool.ruff.lint.extend-per-file-ignores]
'__init__.py' = ['D104'] # Missing docstring in public package

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
ignore_missing_imports = false
check_untyped_defs = true
disallow_untyped_defs = true
ignore_errors = false
disable_error_code = ["import-untyped"]
# You can exclude files with the following (ONLY WHEN NECESSARY)
# exclude = ["path/to/file"]

[tool.coverage.report]
omit = [
    '*__init__*', # __init__ files should just re-export other classes and functions
]

[tool.coverage.run]
command_line = "-m pytest --junit-xml=reports/junit.xml"
data_file = "reports/.coverage"
