[project]
name = "nova-trame"
version = "1.3.3"
description = "A Python Package for injecting curated themes and custom components into Trame applications"
authors = [
    { name = "John Duggan", email = "dugganjw@ornl.gov" },
    { name = "Kristin Maroun", email = "ponsonbykr@ornl.gov" },
    { name = "Sergey Yakubov", email = "yakubovs@ornl.gov" },
    { name = "Gregory Cage", email = "cagege@ornl.gov" }
]
readme = "README.md"
license = "MIT"
keywords = ["NDIP", "Python", "Trame", "Vuetify"]
requires-python = ">=3.10,<3.14"
dependencies = [
    "libsass>=0.23.0,<0.24",
    "mergedeep>=1.3.4,<2",
    "mpld3>=0.5.12,<0.6",
    "tomli>=2.3.0,<3",
    "tornado>=6.5.4,<7",
    "trame>=3.12.0,<4",
    "trame-datagrid>=0.2.2,<0.3",
    "trame-matplotlib>=2.0.3,<3",
    "trame-plotly>=3.1.0,<4",
    "trame-vega>=2.1.1,<3",
    "trame-vuetify>=3.2.0,<4",
    "nova-mvvm>=0.13.1,<0.14",
    "pydantic>=2.12.5,<3",
    "nova-common>=0.3.0,<0.4",
    "blinker>=1.9.0,<2",
    "natsort>=8.4.0,<9",
    "pyoncat>=2.3,<3",
    "oauthlib>=3.3.1,<4",
    "requests-oauthlib>=2.0.0,<3"
]

[project.urls]
Changelog = "https://code.ornl.gov/ndip/public-packages/nova-trame/blob/main/CHANGELOG.md"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64"]

[tool.pixi.environments]
default = {features = ["dev"], solve-group = "default"}
production = {features = [], solve-group = "default"}

[tool.pixi.dependencies]

[tool.pixi.pypi-dependencies]
nova-trame = { path = ".", editable = true }
hatch = ">=1.16.2, <2"

[tool.pixi.feature.dev.pypi-dependencies]
mypy = ">=1.19.1, <2"
pre-commit = ">=4.5.1, <5"
coverage = ">=7.13.0, <8"
pytest = ">=9.0.2, <10"
ruff = ">=0.14.10, <0.15"
selenium = ">=4.39.0, <5"
altair = ">=5.5.0, <6"
vega-datasets = ">=0.9.0, <0.10"
requests = ">=2.32.5, <3"
sphinx = ">=8.2.3, <9"
sphinx-rtd-theme = ">=3.0.2, <4"
sphinxcontrib-napoleon =">=0.7, <0.8"

[tool.pixi.tasks]
app = "python -m tests.gallery"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nova"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test*.py"]
norecursedirs = [".git", "tmp*", "_tmp*", "__pycache__"]

[tool.ruff]
exclude = [".pixi"]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "N",  # PEP8 naming convetions
    "D"  # pydocstyle
]
ignore = [
    "C901",  # too complex
    "D102", # Missing docstring in public function
    "D103", # Missing docstring in public method
    "D401"  # imperative mood

]

[tool.ruff.lint.extend-per-file-ignores]
'__init__.py' = ['D104'] # Missing docstring in public package

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
ignore_missing_imports = false
check_untyped_defs = true
disallow_untyped_defs = true
ignore_errors = false
disable_error_code = ["import-untyped"]
# You can exclude files with the following (ONLY WHEN NECESSARY)
# exclude = ["path/to/file"]

[tool.coverage.report]
omit = [
    '*__init__*', # __init__ files should just re-export other classes and functions
]

[tool.coverage.run]
command_line = "-m pytest --junit-xml=reports/junit.xml"
data_file = "reports/.coverage"
